--- a/LIBMS/templates/new.html
+++ b/LIBMS/templates/new.html
@@ -46,3 +46,23 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
   </body>
 </html>
+
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Display Text Input Fields</h1>
+
+<form action="." method="POST">{%csrf_token%}
+  <label for="fname">fname: </label>
+  <input type="text" id="fname" name="fname"><br><br>
+  <label for="lname">lname: </label>
+  <input type="text" id="lname" name="lname"><br><br>
+  <a href="http:\\www.google.com">
+  <button type="submit" class="btn btn-primary">send </button></a>
+</form>
+
+<p>Click on the submit button to submit the form.</p>
+
+</body>
+</html>
