--- a/LIBMS/templates/remItems.html
+++ b/LIBMS/templates/remItems.html
@@ -1,10 +1,10 @@
-{% extends 'adminBase.html' %}
+{% extends 'venBase.html' %}
 {% block title %}
-    Delete
+    Remove Items
 {% endblock %}
 
 {% block content %}
-<h1 class="text-center" style="margin-top:15px">Delete</h1>
+<h1 class="text-center" style="margin-top:15px">Remove Items</h1>
 {%if btn == 2%}
     <div class="alert alert-danger alert-dismissible fade show" role="alert" style="width:98%;margin: 10 auto">
         All data deleted!
